Bug correction (alignment)

--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -28,6 +28,9 @@
           @include body;
           width: 100%;
           height: 50%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
           background-color: $black;
           color: $white;
           box-sizing: border-box;
